cleaned up upload path endpoints
