# kgea/server/openapi_server/controllers/upload_controller.py
@@ -1,9 +1,26 @@
 from ..kgea_handlers import (
+    get_kge_file_upload_form,
     get_kge_registration_form,
-    get_kge_upload_form,
     register_kge_file_set,
     upload_kge_file_set,
 )
+
+
+def get_file_upload_form(session, submitter, kg_name):  # noqa: E501
+    """Get web form for the KGE File Set upload process
+
+     # noqa: E501
+
+    :param session: 
+    :type session: str
+    :param submitter: 
+    :type submitter: str
+    :param kg_name: 
+    :type kg_name: str
+
+    :rtype: str
+    """
+    return get_kge_file_upload_form(session, submitter, kg_name)
 
 
 def get_registration_form(session):  # noqa: E501
@@ -19,50 +36,24 @@ def get_registration_form(session):  # noqa: E501
     return get_kge_registration_form(session)
 
 
-def get_upload_form(kg_name, session):  # noqa: E501
-    """Get web form for specifying KGE File Set upload
-
-     # noqa: E501
-
-    :param kg_name: 
-    :type kg_name: str
-    :param session: 
-    :type session: str
-
-    :rtype: str
-    """
-    return get_kge_upload_form(kg_name, session)
-
-
-def register_file_set( body
-        # session=None, submitter=None, kg_name=None, **kwargs
-    ):  # noqa: E501
+def register_file_set(body):  # noqa: E501
     """Register core parameters for the KGE File Set upload
 
      # noqa: E501
 
-    :param session: 
-    :type session: str
-    :param submitter: 
-    :type submitter: str
-    :param kg_name: 
-    :type kg_name: str
+    :param body:
+    :type body: dict
 
     :rtype: str
     """
-    return register_kge_file_set(
-        body
-        # session, submitter, kg_name, **kwargs
-    )
+    return register_kge_file_set(body)
 
 
-def upload_file_set(kg_name=None, session=None, data_file_content=None, data_file_metadata=None):  # noqa: E501
-    """Upload web form details specifying a KGE File Set upload process
+def upload_file_set(session, data_file_content, data_file_metadata=None):  # noqa: E501
+    """Upload processing of KGE File Set
 
      # noqa: E501
 
-    :param kg_name: 
-    :type kg_name: str
     :param session: 
     :type session: str
     :param data_file_content: 
@@ -72,4 +63,4 @@ def upload_file_set(kg_name=None, session=None, data_file_content=None, data_fil
 
     :rtype: str
     """
-    return upload_kge_file_set(kg_name, session, data_file_content, data_file_metadata)
+    return upload_kge_file_set(session, data_file_content, data_file_metadata)
